adlatus-ci-cd/cd/deploy/base/modules/api-gate/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api-gate-service
  namespace: adl
spec:
  selector:
    app: api-gate
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
