adlatus-ci-cd/cd/deploy/base/modules/api-gate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gate-ingress
  namespace: adl
  annotations:
    cert-manager.io/issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
      - api-gate.adl.env.dev.bitconex.com
      secretName: tls-secret
  rules:
    - host: api-gate.adl.env.dev.bitconex.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-gate-service-test
                port:
                  number: 80
